--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "date-fns": "^2.30.0",
     "json-server": "^0.17.4",
     "next": "14.0.0",
