--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.30.0",
     "json-server": "^0.17.4",
     "next": "14.0.0",
+    "rc-slider": "^10.3.1",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5",
